--- a/app/views/reminders/_sidenav.html.haml
+++ b/app/views/reminders/_sidenav.html.haml
@@ -1,4 +1,4 @@
-.sidebar_left
+.sidenav.left
   %ul
     - %w(upcoming completed).each do |filter|
       %li= @reminder_filter.filter == filter  ? filter.titleize : (link_to filter.titleize, reminders_path(filter: filter))
