--- a/app/views/layouts/_head.html.haml
+++ b/app/views/layouts/_head.html.haml
@@ -1,16 +1,16 @@
-%meta{ :charset => "utf-8" }/
+%meta{ :charset => "utf-8" }
 
 -# Use the .htaccess and remove these lines to avoid edge case issues.
 -# More info: h5bp.com/b/378
-%meta{ 'http-equiv' => 'X-UA-Compatible', :content => 'IE=edge,chrome=1' }/
+%meta{ 'http-equiv' => 'X-UA-Compatible', :content => 'IE=edge,chrome=1' }
 
 %title
   = "Hound.cc : " + (content_for?(:title) ? content_for(:title) : "Turn your emails into reminders, quickly!")
 
-%meta{ :name => "description", :content => "" }/
+%meta{ :name => "description", :content => "" }
 
 -# Mobile viewport optimized: h5bp.com/viewport
-%meta{ :name => "viewport", :content => "width=device-width" }/
+%meta{ :name => "viewport", :content => "width=device-width" }
 
 -# Place favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons
 
@@ -24,3 +24,5 @@
 = javascript_include_tag "polyfills"
 
 = csrf_meta_tag
+
+%link{:href => "http://fonts.googleapis.com/css?family=Lobster|Amaranth", :rel => "stylesheet", :type => "text/css"}
