--- a/app/assets/stylesheets/screen.sass
+++ b/app/assets/stylesheets/screen.sass
@@ -299,7 +299,7 @@ h4
   text-align: center
 #devise
   background: #fff
-  margin: 50px auto 10px
+  margin: 0 auto 10px
   padding: 40px 40px 20px
   width: 266px
   +border-radius(3px)
