--- a/app/views/snooze/snooze_reminder.html.haml
+++ b/app/views/snooze/snooze_reminder.html.haml
@@ -1,8 +1,6 @@
 %h1 We have snoozed '#{ @reminder.subject }'
 %h3 The new reminder time is #{ @reminder.send_at }
 %h3= "That's #{distance_of_time_in_words_to_now(@reminder.send_at, true)} from now"
--if @reminder.cc.count > 0
-  %p Would you like to snooze the reminder for the others involved?
+-if @reminder.other_recipients.count > 0
+  %p Would you like to notify the other recipients that you've snoozed the reminder?
   %p= link_to 'Yes', snooze_url(@reminder)
-
-
