--- a/app/views/static_page/index.html.haml
+++ b/app/views/static_page/index.html.haml
@@ -2,26 +2,31 @@
   %h2
     Turn your emails into reminders, quickly!
   %h3
-    Hound is an email-based productivity and scheduling tool. It helps you clear out your inbox and to focus on what’s important right now.
+    Hound is an email-based productivity and scheduling tool.
+    %br
+    It helps you clear out your inbox and to focus on what’s important right now.
   %p.signup-wrap
     = mail_to '2minutes@hound.cc', "Try it now - free!", :subject => 'Send me a reminder in 2 minutes!', body: 'Hound will automatically remind you about this email in 2 minutes!', :class=>"signup button"
-    %span Get started within seconds
-  = image_tag('hound.png', :class => "hound", :width => "360")
+    %span
+      Signing up is as easy as sending an email.
+      %br
+      Get started within seconds!
+  = image_tag('hound.png', :class => "hound", :width => "320")
 
 %section#guide
   .wrapper
     %ul.short-guide
       %li
-        = image_tag('100x100.gif')
+        = image_tag('icon1.png')
         %h4 Create fast email reminders
       %li
-        = image_tag('100x100.gif')
+        = image_tag('icon2.png')
         %h4 Get reminded, on-time
       %li
-        = image_tag('100x100.gif')
+        = image_tag('icon1.png')
         %h4 Snooze it (or do it)
       %li
-        = image_tag('100x100.gif')
+        = image_tag('icon2.png')
         %h4 Stay on top of your todo list
 
 %section#content
