--- a/app/views/layouts/_flashes.html.haml
+++ b/app/views/layouts/_flashes.html.haml
@@ -1,9 +1,3 @@
-- unless flash.empty?
-  #flashes
-    #flash_holder
-      - flash.each do |key, value|
-        %div{:id => key.to_s}
-          %p
-            = h value.html_safe
-            %span.notify-close= link_to 'x', '#', :title => 'dismiss this notification', :id => 'closeFlash', :class => 'closeFlash'
+- flash.each do |name, msg|
+  = content_tag :div, msg, :id => "flash_#{name}", :class => 'flash'
 
