--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,23 +7,28 @@
     #container
       = render "layouts/chromeframe"
       %header#header.mini
-        .wrapper
+        - if landing_page?
+          = render 'layouts/flashes'
 
+        .wrapper
           %h1#logo
             = link_to 'Hound.cc', '/'
 
           %nav#main-nav
-            %li= link_to 'How To', '/how-to', :class => cp("how-to")
-            %li= link_to 'FAQ', '/faq', :class => cp("faq")
-            %li= link_to 'About', '/about', :class => cp("about")
             - unless user_signed_in?
-              %li=link_to 'Sign up', new_user_registration_path
+              %li= link_to 'How To', '/how-to', :class => cp("how-to")
+              %li= link_to 'FAQ', '/faq', :class => cp("faq")
+              %li= link_to 'About', '/about', :class => cp("about")
+              %li= link_to 'Sign up', new_user_registration_path
               %li= link_to 'Login', new_user_session_path
             - else
+              %li= link_to 'Upcoming', reminders_path
               %li= link_to 'Settings', settings_path
               %li= link_to 'Logout', destroy_user_session_path, :method => :delete
-      - flash.each do |name, msg|
-        = content_tag :div, msg, :id => "flash_#{name}", :class => 'flash'
+
+      - unless landing_page?
+        = render 'layouts/flashes'
+
       %section.app
         .wrapper
           = yield
@@ -32,12 +37,14 @@
 
     %footer#footer
       .wrapper
-
         %ul.horizontal
           %li= link_to 'Terms of Use', 'terms-of-use'
           %li= link_to 'Privacy Policy', 'privacy-policy'
+          %li= link_to 'How To', '/how-to'
+          %li= link_to 'FAQ', '/faq'
+          %li= link_to 'About', 'about'
           %li= link_to 'Contact Us', 'https://hound.uservoice.com/', :class => 'js_uservoice_link'
-        %p &copy; Copyright 2012 Siyelo
+        %p &copy; 2012 Siyelo Software. All rights reserved.
         = render 'layouts/twitter_button'
 
     = javascript_include_tag "application"
