--- a/app/assets/stylesheets/screen.sass
+++ b/app/assets/stylesheets/screen.sass
@@ -144,8 +144,11 @@ h4
   +text-shadow(rgba(255, 255, 255, 0.6) 0 1px 0)
   +transition(background 0.5s ease)
   &.signup
+    background: url(image_path('paw.png')) no-repeat 90% 50% $two
     text-align: center
     +transition(background 1s ease)
+    &:hover, &:focus
+      background: url(image_path('paw.png')) no-repeat 92% 25% $two
   &.medium
     font-size: 18px
     padding: 5px 40px
@@ -270,9 +273,10 @@ h4
   padding: 40px 0 60px
   text-align: center
   h2
-    border-bottom: 3px dotted rgba(0, 0, 0, 0.2)
-    margin: 0 0 10px
-    padding-bottom: 15px
+    background: url(image_path('separator.png')) no-repeat center bottom
+    //border-bottom: 3px dotted rgba(0, 0, 0, 0.2)
+    //margin: 0 0 10px
+    padding-bottom: 20px
     +text-shadow(rgba(0, 0, 0, 0.4) 0 1px 2px)
   h2, p
     color: $two
@@ -286,6 +290,7 @@ h4
     float: left
     padding: 0 1.3%
     width: 14%
+    
   h3
     color: $one
     font-size: 18px
