inner page main styles

--- a/app/assets/stylesheets/screen.sass
+++ b/app/assets/stylesheets/screen.sass
@@ -51,6 +51,21 @@ h4
     float: left
     padding-right: 15px
     
+.main
+  font-size: 14px
+  line-height: 1.4
+  padding: 40px 0
+  h2
+    margin-bottom: 20px
+  p
+    color: #666
+    margin-bottom: 20px
+  a
+    color: $three
+    font: 16px Amaranth
+  ul
+    margin-bottom: 20px
+    
 #container
   height: auto !important
   margin: 0 auto -142px
@@ -371,7 +386,6 @@ h4
   display: inline
   float: right
   width: 85%
-  
 .modern
   font-size: 12px
   width: 100%
