--- a/app/views/static_page/how-to.html.haml
+++ b/app/views/static_page/how-to.html.haml
@@ -1,9 +1,9 @@
 %section#how-to
-  .wrapper
+  .wrapper.main
 
     %h2 How To
 
-    To get started with Hound.cc, all you have to do is send us an email!
+    %p To get started with Hound.cc, all you have to do is send us an email!
 
     %ul
       %li Compose a new email
@@ -20,7 +20,7 @@
 
     %h3 Time Formats
 
-    Hound has a simple (yet powerful) time formatting scheme;
+    %p Hound has a simple (yet powerful) time formatting scheme;
 
     %h4 From Now
 
