--- a/app/views/static_page/about.html.haml
+++ b/app/views/static_page/about.html.haml
@@ -1,30 +1,29 @@
-%section#about
-  .wrapper.main
+%section#about.main
 
-    %h2 About
+  %h2 About
 
-    %p
-      Hound.cc was started by
-      = link_to 'Siyelo', "http://www.siyelo.com"
-      , a web development consultancy based in beautiful Cape Town, South Africa.
+  %p
+    Hound.cc was started by
+    = link_to 'Siyelo', "http://www.siyelo.com"
+    , a web development consultancy based in beautiful Cape Town, South Africa.
 
-    %p
-      We wanted a better way to manage our email, and our calendar reminders. Everybody uses
-      email; for many it is second nature. On the other hand,
-      creating calendar events can be cumbersome, which is
-      a problem since our calendars are often only useful to the extent we get a reminder
-      when something needs our attention.
+  %p
+    We wanted a better way to manage our email, and our calendar reminders. Everybody uses
+    email; for many it is second nature. On the other hand,
+    creating calendar events can be cumbersome, which is
+    a problem since our calendars are often only useful to the extent we get a reminder
+    when something needs our attention.
 
-    %p What's more, the things that we usually need to act on, are (or come in the form of), emails!
+  %p What's more, the things that we usually need to act on, are (or come in the form of), emails!
 
-    %p
-      So we created Hound.cc which lets you create email reminders, quickly. As fast
-      as you can send or forward an email to Hound, you've just set a reminder.
+  %p
+    So we created Hound.cc which lets you create email reminders, quickly. As fast
+    as you can send or forward an email to Hound, you've just set a reminder.
 
-    %p
-      Its revolutionized the way we manage important tasks and follow-ups, while
-      reducing inbox clutter.
+  %p
+    Its revolutionized the way we manage important tasks and follow-ups, while
+    reducing inbox clutter.
 
-    %p We hope you enjoy using Hound.cc just as much too!
+  %p We hope you enjoy using Hound.cc just as much too!
 
 
