--- a/app/views/static_page/faq.html.haml
+++ b/app/views/static_page/faq.html.haml
@@ -1,10 +1,9 @@
-%section#faq
-  .wrapper.main
-    %h2 FAQ (Frequently Asked Questions)
+%section#faq.main
+  %h2 FAQ (Frequently Asked Questions)
 
-    %h3 How do I set a Hound reminder?
-    %p ...
+  %h3 How do I set a Hound reminder?
+  %p ...
 
 
-    %h3 Do Hound reminders work with Gmail's Conversation View?
-    %p Yes, just like with Mail.app's "Organize By Thread" feature, all related emails/reminders from Hound will appear in the same conversation thread as the original email(s).
+  %h3 Do Hound reminders work with Gmail's Conversation View?
+  %p Yes, just like with Mail.app's "Organize By Thread" feature, all related emails/reminders from Hound will appear in the same conversation thread as the original email(s).
