--- a/app/views/static_page/privacy-policy.html.haml
+++ b/app/views/static_page/privacy-policy.html.haml
@@ -1,73 +1,72 @@
-%section#policy
-  .wrapper.main
+%section#policy.main
 
-    %h2 Privacy Policy
-    %p
-      Your privacy is very important to us. We have developed this Policy in order
-      for you to understand how we collect, use, communicate and disclose and make
-      use of personal information. The following outlines our privacy policy.
-    %p
-      By using Hound.cc, you agree to the collection and use of your personal
-      information as described in this policy. You should know:
+  %h2 Privacy Policy
+  %p
+    Your privacy is very important to us. We have developed this Policy in order
+    for you to understand how we collect, use, communicate and disclose and make
+    use of personal information. The following outlines our privacy policy.
+  %p
+    By using Hound.cc, you agree to the collection and use of your personal
+    information as described in this policy. You should know:
 
-    %ul
-      %li
-        We automatically delete your email contents after the reminder has been
-        sent, as well as your recipient's email address. To provide for the
-        ability to reschedule a reminder that has been sent, deletion may occur
-        several days or weeks following the completion of the followup.
-      %li
-        We collect limited account information to maintain your account and reminders
-        on our servers.
-      %li
-        We will never rent, sell or share information that personally identifies you
-        for marketing purposes without your express permission.
-      %li You can update your account information and preferences at any time
-      %li
-        We will send reminder emails as requested by Hound.cc users. We may send
-        emails about enhancements to hound.cc of tips and ways of using the system.
-      %li
-        You can unsubscribe from all mailings at any time by emailing us at
-        = mail_to 'support@hound.cc'
-      %li
-        Neither Hound.cc nor any third party associated with Hound.cc will ever
-        send you unsolicited emails not directly related to providing assistance
-        or improving your service experience. If If you know of or are experiencing
-        any abuse of the Hound.cc system, please contact us at
-        = mail_to 'support@hound.cc'
-      %li
-        This website uses of cookies and track the behavior of its users using custom
-        and industry standard analytics tools such as Google Analytics.
-      %li
-        Hound.cc is very concerned with safeguarding your information. We employ
-        reasonable measures designed to protect your information from unauthorized
-        access.
-      %li
-        Personal information collected by Hound.cc may be stored and processed in the
-        United States, the United Kingdom, or any other country in which Hound.cc and its infrastructure providers
-        maintain facilities. By using Hound.cc, you consent to any such transfer of
-        information outside of your country.
-
-      %li
-        We reserve the right to transfer your personal information in the event of a
-        transfer of ownership of Hound.cc, such as acquisition by or merger with another
-        company. In such an event, Hound.cc will notify you with an opt-out option
-        before information is transferred and becomes subject to a different privacy
-        policy.
-      %li
-        To comply with the Children's Online Privacy Protection Act, at this time
-        Hound.cc is only available to users who are at least 13 years old. If you
-        are under 13, please do not use the Hound.cc service.
-      %li
-        We may amend this Privacy Policy from time to time, at our sole discretion.
-        Use of information we collect now is subject to the Privacy Policy in effect
-        at the time such information is used.
-      %li
-        If we make changes to the Privacy Policy, we will notify you by posting an
-        announcement on the hound.cc website so you are always aware of what
-        information we collect, how we use it, and under what circumstances if any, it is disclosed.
-
-    %p
-      If you have any questions about this Privacy Policy, please contact us at
+  %ul
+    %li
+      We automatically delete your email contents after the reminder has been
+      sent, as well as your recipient's email address. To provide for the
+      ability to reschedule a reminder that has been sent, deletion may occur
+      several days or weeks following the completion of the followup.
+    %li
+      We collect limited account information to maintain your account and reminders
+      on our servers.
+    %li
+      We will never rent, sell or share information that personally identifies you
+      for marketing purposes without your express permission.
+    %li You can update your account information and preferences at any time
+    %li
+      We will send reminder emails as requested by Hound.cc users. We may send
+      emails about enhancements to hound.cc of tips and ways of using the system.
+    %li
+      You can unsubscribe from all mailings at any time by emailing us at
       = mail_to 'support@hound.cc'
+    %li
+      Neither Hound.cc nor any third party associated with Hound.cc will ever
+      send you unsolicited emails not directly related to providing assistance
+      or improving your service experience. If If you know of or are experiencing
+      any abuse of the Hound.cc system, please contact us at
+      = mail_to 'support@hound.cc'
+    %li
+      This website uses of cookies and track the behavior of its users using custom
+      and industry standard analytics tools such as Google Analytics.
+    %li
+      Hound.cc is very concerned with safeguarding your information. We employ
+      reasonable measures designed to protect your information from unauthorized
+      access.
+    %li
+      Personal information collected by Hound.cc may be stored and processed in the
+      United States, the United Kingdom, or any other country in which Hound.cc and its infrastructure providers
+      maintain facilities. By using Hound.cc, you consent to any such transfer of
+      information outside of your country.
+
+    %li
+      We reserve the right to transfer your personal information in the event of a
+      transfer of ownership of Hound.cc, such as acquisition by or merger with another
+      company. In such an event, Hound.cc will notify you with an opt-out option
+      before information is transferred and becomes subject to a different privacy
+      policy.
+    %li
+      To comply with the Children's Online Privacy Protection Act, at this time
+      Hound.cc is only available to users who are at least 13 years old. If you
+      are under 13, please do not use the Hound.cc service.
+    %li
+      We may amend this Privacy Policy from time to time, at our sole discretion.
+      Use of information we collect now is subject to the Privacy Policy in effect
+      at the time such information is used.
+    %li
+      If we make changes to the Privacy Policy, we will notify you by posting an
+      announcement on the hound.cc website so you are always aware of what
+      information we collect, how we use it, and under what circumstances if any, it is disclosed.
+
+  %p
+    If you have any questions about this Privacy Policy, please contact us at
+    = mail_to 'support@hound.cc'
 
