--- a/app/views/static_page/index.html.haml
+++ b/app/views/static_page/index.html.haml
@@ -1,16 +1,18 @@
-%h2
-  Turn your emails into reminders, quickly!
-%h3
-  Hound is an email-based productivity and scheduling tool.
-  %br
-  It helps you clear out your inbox and to focus on what’s important right now.
-%p.signup-wrap
-  = mail_to '2minutes@hound.cc', "Try it now - free!", :subject => 'Send me a reminder in 2 minutes!', body: 'Hound will automatically remind you about this email in 2 minutes!', :class=>"signup button"
-  %span
-    Signing up is as easy as sending an email.
-    %br
-    Get started within seconds!
-= image_tag('hound.png', :class => "hound", :width => "320")
+%section#featured
+  .wrapper
+    %h2
+      Turn your emails into reminders, quickly!
+    %h3
+      Hound is an email-based productivity and scheduling tool.
+      %br
+      It helps you clear out your inbox and to focus on what’s important right now.
+    %p.signup-wrap
+      = mail_to '2minutes@hound.cc', "Try it now - free!", :subject => 'Send me a reminder in 2 minutes!', body: 'Hound will automatically remind you about this email in 2 minutes!', :class=>"signup button"
+      %span
+        Signing up is as easy as sending an email.
+        %br
+        Get started within seconds!
+    = image_tag('hound.png', :class => "hound", :width => "320")
 
 %section#guide
   .wrapper
